# mpc-ros

./: CMakeLists.txt  package.xml  setup.py
configure/: config.yaml
launch/: mpc.launch
rviz/: mpc.rviz
src/mpc_ros/: mpc_Town04.py  mpc_Town04_launch.py
src/mpc_ros/mpc/: mpc_path_tracking.py
src/mpc_ros/utils/: curve_generator.py  dubins_path.py  trans.py
